--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
   <script src="node_modules/systemjs/dist/system.src.js"></script>
 
-  <!-- <script src="node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="node_modules/jquery-ui-dist/jquery-ui.min.js"></script> -->
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="node_modules/jquery-ui-dist/jquery-ui.min.js"></script>
 
 <!-- 
   <script src="node_modules/underscore/underscore-min.js"></script>
