--- a/index.html
+++ b/index.html
@@ -2,31 +2,20 @@
 <head>
   <title>Angular Demos</title>
 
-  <script src="node_modules/systemjs/dist/system.src.js"></script>
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="node_modules/jquery-ui-dist/jquery-ui.min.js"></script>
   <script src="node_modules/zone.js/dist/zone.min.js"></script>
   
   <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="site.css?v=1" rel="stylesheet">
 
-  <script src="systemjs-config.js">
-    
-  </script>
+  <link href="site.css?v=1" rel="stylesheet">
 
 </head>
 <body>
-
-<script>
-    System.import('app').then(() => {
-      return System.import("angular_samples/src/apps/demo/main");
-    })
-    .catch((e) => {
-      console.log(e);
-    })
-</script>
-
+<div class="container">  
+  <h1>Webpack 3 Demo</h1>
+</div>
 <demo-app></demo-app>
+
+<script src="src/apps/demo/prod.js"></script>
 
 </body>
 
