--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </div>
 <demo-app></demo-app>
 
-<script src="src/apps/demo/prod.js"></script>
+<script src="src/apps/demo/prod.min.js"></script>
 
 </body>
 
