--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <link href="site.css?v=1" rel="stylesheet">
+  <link href="site.css" rel="stylesheet">
 
   <script>
     (function (global) {
@@ -24,7 +24,6 @@
 <div class="container">  
   <h1>Rollup With Lazy Loading</h1>
 </div>
-
 
 <script>
   System.import('src/apps/demo/main.js');
