--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
   <title>Angular Demos</title>
 
+  <base href="/">
+
   <script src="node_modules/systemjs/dist/system.src.js"></script>
 
   <script src="node_modules/zone.js/dist/zone.min.js"></script>
