--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <base href="/">
 
-  <script src="node_modules/systemjs/dist/system.src.js"></script>
+  <script src="node_modules/systemjs/dist/system.js"></script>
 
   <script src="node_modules/zone.js/dist/zone.min.js"></script>
   
