--- a/index.html
+++ b/index.html
@@ -5,33 +5,65 @@
   <base href="/">
 
   <script src="node_modules/systemjs/dist/system.js"></script>
-
   <script src="node_modules/zone.js/dist/zone.min.js"></script>
   
   <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <link href="site.css" rel="stylesheet">
+  <link href="site.css?v=1" rel="stylesheet">
 
   <script>
     (function (global) {
+  
     System.config({
-      packages: {
-        '.' : {}
-      }
+        defaultExtension: 'js',
+
+        map: {
+        'app': 'src/apps/demo/main.js',
+        'angular_samples/src/apps/demo': 'src/apps/demo',
+     
+        '@angular/animations': 'node_modules/@angular/animations/bundles/animations.umd.js',
+        '@angular/animations/browser': 'node_modules/@angular/animations/bundles/animations-browser.umd.js',
+        '@angular/common': 'node_modules/@angular/common/bundles/common.umd.js',
+        '@angular/core': 'node_modules/@angular/core/bundles/core.umd.js',
+        '@angular/compiler': 'node_modules/@angular/compiler/bundles/compiler.umd.js',
+        '@angular/platform-browser': 'node_modules/@angular/platform-browser/bundles/platform-browser.umd.js',
+        '@angular/platform-browser/animations': 'node_modules/@angular/platform-browser/bundles/platform-browser-animations.umd.js',
+        '@angular/http': 'node_modules/@angular/http/bundles/http.umd.js',
+        '@angular/router': 'node_modules/@angular/router/bundles/router.umd.js',
+        '@angular/forms': 'node_modules/@angular/forms/bundles/forms.umd.js',
+
+        'rxjs': 'external/rxjs'
+        },
+
+        packages: {
+          rxjs: {
+            defaultExtension: 'js'
+          },
+
+          'src/apps/demo': {
+            meta: {
+              './*.js': {
+                loader: 'systemjs-route-loader.js'
+              }
+            },
+            defaultExtension: 'js'
+          }
+        }
     });
-  })(this);
-    </script>
+})(this);
+  </script>
+
 </head>
 <body>
-<div class="container">  
-  <h1>Rollup With Lazy Loading</h1>
-</div>
 
 <script>
-  System.import('src/apps/demo/main.js');
+    System.import('app')
+    .catch((e) => {
+      console.log(e);
+    })
 </script>
 
 <demo-app></demo-app>
+
 </body>
 
 </html>
